Added relation for tracked assets and change date update
