# Backend/FinancialApp.Application/Queries/GetTrackedCryptoHandler.cs
@@ -10,6 +10,7 @@ namespace FinancialApp.Application.Queries
         public int Id { get; set; }
         public string CryptoCurrencySymbol { get; set; }
         public string FiatCurrencySymbol { get; set; }
+        public bool CollectData { get; set; }
     }
 
     public class GetTrackedCryptoQuery : IRequest<Result<List<GetTrackedCryptoResponse>>>
@@ -26,13 +27,14 @@ namespace FinancialApp.Application.Queries
 
         public async Task<Result<List<GetTrackedCryptoResponse>>> Handle(GetTrackedCryptoQuery request, CancellationToken cancellationToken)
         {
-            var data = await _repository.GetAllRecords<CryptoCurrenciesSettings>();
+            var data = await _repository.GetAllRecords<TrackedCryptocurrencies>();
 
             var results = data.Select(p => new GetTrackedCryptoResponse() 
             {
                 Id = p.Id,
-                CryptoCurrencySymbol = p.CryptoCurrencySymbol,
-                FiatCurrencySymbol = p.FiatCurrencySymbol
+                CryptoCurrencySymbol = p.Name,
+                FiatCurrencySymbol = p.ReferenceCurrencyName,
+                CollectData = p.CollectData,
             }).ToList();
 
             return Result.Ok(results);
